# AI-agent

./: .gitignore  INTEGRATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  test_basic.py  test_custom_alert.py  test_file_analyzer.py  test_import.py
Config/: Seting.json
Data/: architect_courses.json  architect_glossary.json  integration_endpoints.json
Source/: __init__.py  agent.py  format_alert_response.py  prompts.py  tools.py  utils.py
Source/config/: __init__.py  credentials.py  logging_config.py
Source/tools/: __init__.py  alert_tools.py  logging_utils.py
TestAlerts/: extracted_alert.txt  multiple_alerts.txt  sample_alert.txt
Tests/: test_bot_alert.py  test_bot_format.py  test_custom_alert.py  test_integration.py  test_service_field.py  test_specific_alert.py  test_time_fix.py  test_timestamp.py
config/: __init__.py.bak  exceptions.py  logging_config.py  settings.json  settings.py
data/: architect_courses.json
src/: cli.py
src/alert_processing/: __init__.py  alert_formatter.py  alert_parser.py
src/core/: agent.py  multithreaded.py  prompts.py  utils.py
src/integrations/: bot_integration.py
src/tools/: __init__.py  alert_tools.py  alert_tools_fixed.py  api_tools.py  fallback_bot_response.py  gigachat_tools.py  logging_utils.py  tools.py
tests/: __init__.py  create_env_file.py
tests/debug/: debug_commands.py
tests/unit/: test_2alert_fixed.py  test_alert.py  test_alert_number.py  test_bot_response.py  test_end_to_end.py  test_file_analyzer.py  test_gigachat_api.py
